# ukfLib

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  mtxLib.c  mtxLib.h  notes.txt  test2.c  test2.dsp  test2.dsw  test2.ncb  test2.opt  test2.plg  ukf.m  ukfCfg.c  ukfCfg.h  ukfCfg1.c  ukfCfg1.h  ukfLib.c  ukfLib.h  ukf_cfg0.slx  ukf_cfg1.slx  ukf_sFun_build.slx
.github/workflows/: codeql-analysis.yml
cfg/: cfg_info.txt  folder_info.md  ukfCfg.c  ukfCfg.h  ukfCfg1.c  ukfCfg1.h  ukfCfg2.c  ukfCfg2.h
lib/: System_Types.h  lib_info  mtxLib.c  mtxLib.h  ukfLib.c  ukfLib.h
models/: folder_info.md  ukf_cfg0.slx  ukf_cfg1.slx  ukf_cfg2.mdl  vdpMeasurementNonAdditiveNoiseFcn.m  vdpStateFcn.m
test/: CMakeLists.txt  Doxyfile  Makefile  mtx2arr.m  mtxGen.c  mtxGen.m  mtxtest2.c  test2.c  test_info  ukfTest.c
test/ukfLibTest/: ukfLibTest.sln
test/ukfLibTest/ukfLibTest/: ukfLibTest.vcxproj  ukfLibTest.vcxproj.filters
tools/: tools.txt
tools/ukfCfgGen/: mtx2carr.m  ukfCfgGen.m  ukfCfgTemplate.c  ukfCfgTemplate.h  ukfConfig.prj  ukfGUI.fig  ukfGUI.m
